[gd_scene load_steps=9 format=3 uid="uid://cpucufodphld5"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_gf72i"]
[ext_resource type="PackedScene" uid="uid://cm3d1u3ihuwtd" path="res://scenes/HUD.tscn" id="2_i2rul"]
[ext_resource type="Script" path="res://scripts/HandCam.gd" id="3_pseo8"]
[ext_resource type="AudioStream" uid="uid://bf0ul40bfgc3f" path="res://assets/audio/WilhelmScream.mp3" id="4_ee3qm"]
[ext_resource type="AudioStream" uid="uid://cfoagjn7ylhw8" path="res://assets/audio/hallway_sounds/footsteps_carpet_walk.mp3" id="5_xqya4"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pdoig"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0ogxy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qhoj4"]
height = 1.0
radius = 15.0

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("attack_marker") groups=["Player"]]
script = ExtResource("1_gf72i")
attack_marker = NodePath("AttackMarker")

[node name="AttackMarker" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.98068, 0, -2.55766)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_pdoig")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0ogxy")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.402157, 0)

[node name="PlayerCam" type="Camera3D" parent="Head"]
unique_name_in_owner = true
cull_mask = 524287
current = true
far = 1000.0

[node name="PlayerRay" type="RayCast3D" parent="Head/PlayerCam"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2)
collision_mask = 2

[node name="PlayerInfoLabel" type="Label3D" parent="Head/PlayerCam"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0270636, -0.600696, -1.65353)
visible = false
text = "It's too high
to reach"
font_size = 22

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
positional_shadow_atlas_size = 4096
canvas_cull_mask = 4294443008
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="HandCam" type="Camera3D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.656383, 0)
cull_mask = 524288
script = ExtResource("3_pseo8")

[node name="Hand" type="Node3D" parent="CanvasLayer/SubViewportContainer/SubViewport/HandCam"]
unique_name_in_owner = true
transform = Transform3D(0.931907, -0.362698, 0, 0.331336, 0.851326, 0.406769, -0.147534, -0.37907, 0.913531, 0.358857, -0.469255, -0.8357)

[node name="Hud" parent="CanvasLayer" instance=ExtResource("2_i2rul")]
unique_name_in_owner = true

[node name="FallScream" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_ee3qm")

[node name="LightArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59315, 0)
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="LightArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.238224, 0, 0.0183306)
shape = SubResource("CylinderShape3D_qhoj4")
disabled = true

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xqya4")

[connection signal="area_entered" from="LightArea" to="." method="_on_light_area_area_entered"]
[connection signal="area_exited" from="LightArea" to="." method="_on_light_area_area_exited"]
